kube/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pos-api
  namespace: pos
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: pos.hunvikran.com
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: pos-api
                port:
                  number: 7070
  tls:
    - hosts:
        - hunvikran.com
        - www.hunvikran.com
        - pos.hunvikran.com
        - registry.hunvikran.com
      secretName: hunvikran.com-tls
