kube/ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pos-ui
  namespace: pos
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  rules:
    - host: pos.hunvikran.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pos-ui
                port:
                  number: 3000
  tls:
    - hosts:
        - hunvikran.com
        - www.hunvikran.com
        - pos.hunvikran.com
        - registry.hunvikran.com
      secretName: hunvikran.com-tls
